# x12

./: .pre-commit-config.yaml  Dockerfile  README.md  logging.yaml  pyproject.toml  setup.cfg
.github/workflows/: continuous-integration.yml
repo-docs/: NEW_TRANSACTION.md  X12_REFERENCES.md
src/linuxforhealth/x12/: __init__.py  api.py  cli.py  config.py  encoding.py  io.py  models.py  parsing.py  support.py  validators.py
src/linuxforhealth/x12/v4010/: segments.py
src/linuxforhealth/x12/v4010/x12_837_004010X096A1/: loops.py  parsing.py  segments.py
src/linuxforhealth/x12/v4010/x12_837_004010X098A1/: loops.py  parsing.py  segments.py
src/linuxforhealth/x12/v5010/: segments.py  validators.py
src/linuxforhealth/x12/v5010/x12_270_005010X279A1/: __init__.py  loops.py  parsing.py  segments.py  transaction_set.py
src/linuxforhealth/x12/v5010/x12_271_005010X279A1/: loops.py  parsing.py  segments.py  transaction_set.py
src/linuxforhealth/x12/v5010/x12_276_005010X212/: loops.py  parsing.py  segments.py  transaction_set.py
src/linuxforhealth/x12/v5010/x12_277_005010X212/: loops.py  parsing.py  segments.py  transaction_set.py
src/linuxforhealth/x12/v5010/x12_834_005010X220A1/: parsing.py  segments.py  transaction_set.py
src/linuxforhealth/x12/v5010/x12_835_005010X221A1/: loops.py  parsing.py  segments.py  transaction_set.py
src/linuxforhealth/x12/v5010/x12_837_005010X222A2/: loops.py  parsing.py  segments.py
src/linuxforhealth/x12/v5010/x12_837_005010X223A3/: loops.py  parsing.py  segments.py
src/tests/: conftest.py  support.py  test_4010_segments.py  test_5010_segments.py  test_api.py  test_common_validations.py  test_config.py  test_create_parser.py  test_encoding.py  test_fuzz_robustness.py  test_resource_roundtrip.py  test_serialization_internals.py  test_support.py  test_x12_model_reader.py  test_x12_parser_context.py  test_x12_segment_reader.py
src/tests/benefit_enrollment_maintenance/: test_834_005010X220A1.py
src/tests/eligibility/: test_270_005010X279A1.py  test_271_005010X279A1.py
src/tests/healthcare_claim_institutional/: test_837_004010X096A1.py  test_837i_005010X223A3.py
src/tests/healthcare_claim_payment/: test_835_005010X221A1.py
src/tests/healthcare_claim_professional/: test_837_004010X098A1.py  test_837_005010X222A2.py
src/tests/healthcare_claim_status/: test_x12_276_005010X212.py  test_x12_277_005010X212.py
