[build-system]
requires = [
    "setuptools>=61",
    "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "linuxforhealth-x12"
description = "LinuxForHealth x12 streams ASC 5010 X12 health care transactions into Pydantic Models for a pleasant pythonic parsing experience! Integration options include REST endpoints, CLI (command line), or direct access using the Python SDK"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Developers",
]
dependencies = [
    "pydantic>=2,<3",
    "pydantic-settings>=2.0",
    "python-dotenv>=0.19.0",
]
dynamic = ["version"]

[project.optional-dependencies]
api = [
    "fastapi>=0.100",
    "uvicorn[standard]>=0.17.0",
    "httpx>=0.23",
]
dev = [
    "black>=23.0,<24.0",
    "pre-commit>=2.14.1",
    "pytest>=7.1.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
lfhx12 = "linuxforhealth.x12.cli:main"
lfhx12-api = "linuxforhealth.x12.api:run_server"

[tool.setuptools]
zip-safe = false

[tool.setuptools.dynamic]
version = { attr = "linuxforhealth.x12.__version__" }

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true

[tool.pytest.ini_options]
testpaths = ["src/tests"]
addopts = "--cov=linuxforhealth.x12 --cov-report=term-missing"

[tool.coverage.run]
source = ["linuxforhealth.x12"]
omit = ["*/tests/*"]

[tool.coverage.report]
show_missing = true

[tool.black]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
(
  /(
    | \.git
    | \.pytest_cache
  )/
)
'''