[build-system]
requires = [
    "setuptools>=61",
    "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "linuxforhealth-x12"
description = "LinuxForHealth x12 streams ASC 5010 X12 health care transactions into Pydantic Models for a pleasant pythonic parsing experience! Integration options include REST endpoints, CLI (command line), or direct access using the Python SDK"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Developers",
]
dependencies = [
    "pydantic>=2,<3",
    "pydantic-settings>=2.0",
    "python-dotenv>=0.19.0",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    # ty is a pre-1.0 preview; pin exactly so the blocking type-check gate is
    # reproducible and upgrades are deliberate.
    "ty==0.0.53",
    "hypothesis>=6",
    "pre-commit>=2.14.1",
    "pytest>=7.1.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
lfhx12 = "linuxforhealth.x12.cli:main"

[tool.setuptools]
zip-safe = false

[tool.setuptools.dynamic]
version = { attr = "linuxforhealth.x12.__version__" }

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true

[tool.setuptools.package-data]
# PEP 561 marker so downstream consumers pick up the inline type hints.
"linuxforhealth.x12" = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["src/tests"]
addopts = "--cov=linuxforhealth.x12 --cov-report=term-missing --cov-fail-under=95"

[tool.coverage.run]
source = ["linuxforhealth.x12"]
omit = ["*/tests/*"]

[tool.coverage.report]
show_missing = true

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
# Default rule set (E4/E7/E9, F). The transaction packages intentionally use
# `from ... import *` to re-export segment/loop models, so the star-import
# warnings (F403/F405) are silenced rather than rewritten.
ignore = ["F403", "F405"]

[tool.ty.environment]
# Target the supported floor; type-checking is independent of the runtime matrix.
python-version = "3.10"
# `src` layout: tell ty where first-party modules live.
root = ["src"]